deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-demo
  labels:
    app: quarkus-demo
spec:
  selector:
    app: quarkus-demo
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
